force-app/main/default/objects/Booking__c/fields/Booking_Postseminar_Feedback_Link__c.field-meta.xml
<CustomField>
    <fullName>Booking_Postseminar_Feedback_Link__c</fullName>
    <description>This field is not used. Replaced by new 1-10 rating link field &quot;Debrief link (1-10)&quot;</description>
    <formula>$Setup.Elevate_Org_Settings__c.Booking_Site_Base_URL__c + &apos;/SeminarFeedback?id=&apos; +  Encrypted_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is not used. Replaced by new 1-10 rating link field &quot;Debrief link (1-10)&quot;</inlineHelpText>
    <label>X_ARCHIVED_Booking Workshop Feedback</label>
    <type>Text</type>
</CustomField>