force-app/main/default/objects/Booking__c/fields/Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_Type__c</fullName>
    <description>Indicator to differentiate Parent, Staff, Student &amp; other workshops</description>
    <formula>IF(AND( RecordType.Name = &quot;Connect&quot;, Has_Presenter_Led__c = 0),&quot;Notes&quot;,
IF(AND( RecordType.Name = &quot;Connect&quot;, Has_Presenter_Led__c &gt; 0),&quot;Workshop&quot;,
IF( Total_Seminar__c = Has_Parent__c , &quot;Parent Workshops Only&quot;,
IF(Total_Seminar__c = Has_Staff_Workshops__c , &quot;Staff Workshops Only&quot;,
IF (Total_Seminar__c = Has_Student_Workshops__c, &quot;Student Workshops Only&quot;,
&quot;Mix of Workshops&quot;))) ))</formula>
    <label>Booking Type</label>
    <type>Text</type>
</CustomField>