force-app/main/default/objects/Booking__c/fields/Create_Final_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Create_Final_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field was created to trigger automatic final invoice creation using MuleSoft</description>
    <inlineHelpText>Select this to automatically create final Invoice using MuleSoft</inlineHelpText>
    <label>Create Final Invoice</label>
    <type>Checkbox</type>
</CustomField>