force-app/main/default/objects/Booking__c/fields/Cura_Booking_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Cura_Booking_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cura Booking Cancelled</label>
    <type>Checkbox</type>
</CustomField>