force-app/main/default/objects/Booking__c/fields/Cura_Classroom_Created__c.field-meta.xml
<CustomField>
    <fullName>Cura_Classroom_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cura Classroom Created</label>
    <type>Checkbox</type>
</CustomField>