force-app/main/default/objects/Booking__c/fields/Cura_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Cura_End_Time__c</fullName>
    <label>Cura End Time</label>
    <type>DateTime</type>
</CustomField>