force-app/main/default/objects/Booking__c/fields/Cura_Logged_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Cura_Logged_In_Time__c</fullName>
    <label>Cura Logged In Time</label>
    <type>DateTime</type>
</CustomField>