force-app/main/default/objects/Booking__c/fields/Cura_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Cura_Start_Time__c</fullName>
    <label>Cura Start Time</label>
    <type>DateTime</type>
</CustomField>