force-app/main/default/objects/Booking__c/fields/Cura_Student_Work_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Cura_Student_Work_Submitted__c</fullName>
    <label>Cura Student Work Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>