force-app/main/default/objects/Booking__c/fields/Cura_Students_Added__c.field-meta.xml
<CustomField>
    <fullName>Cura_Students_Added__c</fullName>
    <label>Cura Students Added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>