force-app/main/default/objects/Booking__c/fields/Cura_Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>Cura_Subscription_Id__c</fullName>
    <externalId>true</externalId>
    <label>Cura Subscription Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>