force-app/main/default/objects/Booking__c/fields/Cura_Teacher_Explored__c.field-meta.xml
<CustomField>
    <fullName>Cura_Teacher_Explored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cura Teacher Explored</label>
    <type>Checkbox</type>
</CustomField>