force-app/main/default/objects/Booking__c/fields/Cura_Teacher_Subject__c.field-meta.xml
<CustomField>
    <fullName>Cura_Teacher_Subject__c</fullName>
    <label>Cura Teacher Subject</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Geography</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Elective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>