force-app/main/default/objects/Booking__c/fields/Cura_Teacher_Use_Classroom__c.field-meta.xml
<CustomField>
    <fullName>Cura_Teacher_Use_Classroom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cura Teacher Use Classroom</label>
    <type>Checkbox</type>
</CustomField>