force-app/main/default/objects/Booking__c/fields/Cura_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Cura_User_Id__c</fullName>
    <externalId>true</externalId>
    <label>Cura User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>