force-app/main/default/objects/Booking__c/fields/Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Type__c</fullName>
    <description>Delivery mode - Online Platform, Video Conference or In Person</description>
    <formula>IF( Booking_Location__r.Name = &quot;ONLINE&quot;, &quot;Online Platform&quot;,
IF (Has_Online_Platform__c &gt; 0, &quot;Online Platform&quot;,
IF( LEFT(Booking_Location__r.Name,10) = &quot;VIDEO CONF&quot;, &quot;Video Conference&quot;,
IF(AND(RecordType.Name = &quot;Connect&quot;, Has_Presenter_Led__c = 0),&quot;Print&quot;,
&quot;In Person&quot;))) )</formula>
    <label>Delivery Type</label>
    <type>Text</type>
</CustomField>