force-app/main/default/objects/Booking__c/fields/Final_Invoice_Created__c.field-meta.xml
<CustomField>
    <fullName>Final_Invoice_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field was created so final invoice creation is recorded through MuleSoft</description>
    <inlineHelpText>Final Invoice has been created using MuleSoft</inlineHelpText>
    <label>Final Invoice Created</label>
    <type>Checkbox</type>
</CustomField>