force-app/main/default/objects/Booking__c/fields/Follow_up_Pack_Sent__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Pack_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>UK only. Used to track when CSMs send follow-up pack manually for SS, TM &amp; AYE</inlineHelpText>
    <label>Follow-up Pack Sent</label>
    <type>Checkbox</type>
</CustomField>