force-app/main/default/objects/Booking__c/fields/Notes_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Notes_Confirmation__c</fullName>
    <formula>Program__r.Notes_Confirmation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Based on program object. Used in &apos;Program Notes Confirmation&apos; email templates (Connect)</inlineHelpText>
    <label>Program Notes Confirmation</label>
    <type>Text</type>
</CustomField>