force-app/main/default/objects/Booking__c/fields/Printing_Dispatched_Notes__c.field-meta.xml
<CustomField>
    <fullName>Printing_Dispatched_Notes__c</fullName>
    <label>Printing Dispatched (Notes)</label>
    <type>Date</type>
</CustomField>