force-app/main/default/objects/Booking__c/fields/Printing_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Printing_Due_Date__c</fullName>
    <formula>CASE(MOD(Date__c - DATE(1900, 1, 7), 7), 
0,Date__c -3,
1,Date__c -3,
2,Date__c -3 -1,
3,Date__c -3 -2, 
4,Date__c -3,
5,Date__c -3,
6,Date__c -3,
null)</formula>
    <inlineHelpText>Three week-days before the workshop date</inlineHelpText>
    <label>Printing Due (Handouts)</label>
    <type>Date</type>
</CustomField>