force-app/main/default/objects/Booking__c/fields/Printing_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Printing_Ordered__c</fullName>
    <inlineHelpText>Date Notes were ordered with printers</inlineHelpText>
    <label>Printing Ordered (Notes)</label>
    <type>Date</type>
</CustomField>