force-app/main/default/objects/Booking__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <formula>IF( Has_Study_Skills_Products__c &gt; 0 , &quot;Study Skills&quot;, 
IF ( RecordType.Name = &quot;Connect&quot;, &quot;Connect&quot;,
IF( Has_PBL_Products__c &gt; 0, &quot;PBL&quot;, 
IF ( Has_Internal_Training__c &gt; 0, &quot;Internal Training&quot;,
&quot;Not Found&quot;))))</formula>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>