force-app/main/default/objects/Booking__c/fields/Program_Content_Confirmation_Global__c.field-meta.xml
<CustomField>
    <fullName>Program_Content_Confirmation_Global__c</fullName>
    <formula>Program__r.Program_Content_Confirmation__c</formula>
    <label>Program Workshop Content Confirmation (G</label>
    <type>Text</type>
</CustomField>