force-app/main/default/objects/Booking__c/fields/Program_Logistics_Form_Global__c.field-meta.xml
<CustomField>
    <fullName>Program_Logistics_Form_Global__c</fullName>
    <formula>Program__r.Logistics_Confirmation_Form__c</formula>
    <inlineHelpText>Based on program object. 
Used in &apos;Program Confirmation&apos; email templates (NY, Connect).</inlineHelpText>
    <label>Program Workshop Logistics Confirmation</label>
    <type>Text</type>
</CustomField>