force-app/main/default/objects/Booking__c/fields/Total_Completed_Seminar__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed_Seminar__c</fullName>
    <description>Used to track completed workshops. Drives automation of Booking status alongside  the &apos;Total Workshops&apos; field.</description>
    <label>Total Completed Workshops</label>
    <summaryFilterItems>
        <field>Seminar__c.Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Seminar__c.Name</field>
        <operation>notContain</operation>
        <value>Manual</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Seminar__c.Name</field>
        <operation>notContain</operation>
        <value>Fee</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Seminar__c.X_of_Presenters__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Seminar__c.Booking__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>