force-app/main/default/objects/Booking__c/fields/Total_Seminar__c.field-meta.xml
<CustomField>
    <fullName>Total_Seminar__c</fullName>
    <description>Tracks total number active workshops. Used to automate booking status update to Closed when alll workshops are completed.</description>
    <label>Total Workshops</label>
    <summaryFilterItems>
        <field>Seminar__c.Name</field>
        <operation>notContain</operation>
        <value>Manual</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Seminar__c.Name</field>
        <operation>notContain</operation>
        <value>Fee</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Seminar__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Pending, Cancelled</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Seminar__c.X_of_Presenters__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Seminar__c.Booking__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>